--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Blog-aps-apis
 
 
 server.port=8080
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/Blog-Apps
+spring.datasource.url=jdbc:mysql://localhost:3306/blog-apps
 spring.datasource.username=root
 spring.datasource.password=root
 
