--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>			
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
